refactored some gun container code

--- a/landing.html
+++ b/landing.html
@@ -8,6 +8,7 @@
 <script src="/public/scenes/arena/model/camera_object.js"></script>
 <script src="/public/scenes/arena/model/gun.js"></script>
 <script src="/public/scenes/arena/model/gun_container.js"></script>
+<script src="/public/scenes/arena/model/player_gun_container.js"></script>
 <script src="/public/scenes/arena/model/player.js"></script>
 <script src="/public/scenes/arena/model/enemy.js"></script>
 <script src="/socket.io/socket.io.js"></script>
