--- a/landing.html
+++ b/landing.html
@@ -13,6 +13,8 @@
 <script src="/public/scenes/arena/model/enemy.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 
+<script src="/public/scenes/arena/model/bullet.js"></script>
+<script src="/public/scenes/arena/managers/bullet_manager.js"></script>
 <script src="/public/scenes/arena/ArenaScene.js"></script>
 <script src="/public/js/main_game.js"></script>
 <title>Document</title>
